Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,8 @@
 [project]
 	state = active
+[access "refs/heads/*"]
+	push = group LG Optimus G Maintainers
+	label-Code-Review = -2..+2 group LG Optimus G Maintainers
+	label-Verified = -1..+1 group LG Optimus G Maintainers
+	rebase = group LG Optimus G Maintainers
+	submit = group LG Optimus G Maintainers
